--- a/style2.css
+++ b/style2.css
@@ -31,7 +31,9 @@ dt {display: inline;
     font-weight: bold;
 }
 /* Make a comma appear after the name of each menu item (before the description) COME BACK*/
-
+dt::after {
+    content: ","
+}
 dd {display: inline; margin: 0;}
 dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
 
